test/should_fail/operator_pattern_neg.erl
-module(operator_pattern_neg).

-spec n(non_neg_integer()) -> {}.
n(1-2) -> {}.
